--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"description": "",
 		"main": "index.js",
 		"scripts": {
-				"start": "npm run build-ts && node output/index.js",
+				"start": "npm run build-ts && node out/index.js",
 				"build-ts": "tsc",
 				"watch-ts": "tsc -w"
 		},
@@ -14,5 +14,8 @@
 				"@types/node": "^15.3.1",
 				"eslint": "^7.26.0",
 				"typescript": "^4.2.4"
+		},
+		"dependencies": {
+				"emoji-regex": "^9.2.2"
 		}
 }
